Add User collection logic.
